fixed spacing issues in general meeting section, added map to cba button

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,7 @@
 }
 
 html {
-  background: url(images/Background.JPG) no-repeat center center fixed;
+  background: url(..\images\Background.JPG) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
